tests/snapshots/run_wpt_conformance__coreml_lesserOrEqual_float16_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser_or_equal.https.any.js lesserOrEqual float16 2D tensors, coreml
 lesser_or_equal :: lesserOrEqual float16 2D tensors: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-8.28125, -3.21875, -6.54296875, -0.54052734375, -5.4140625, 5.58203125, 1.501953125, 6.59375, -9.921875, -7.13671875, -4.9140625, -9.140625, 9.40625, -9.828125, -2.01171875, -6.59765625, -8.265625, 8.28125, 1.6455078125, -1.486328125, -5, -0.9208984375, -9.4375, 9.8125]; inputB: [5.5, 1.7666015625, -2.81640625, -6.046875, 9.5, -2.1015625, -4.078125, 5.3125, 0.038726806640625, -0.307373046875, 4.9765625, 3.462890625, 8.609375, 1.513671875, 2.009765625, -0.310546875, -4.24609375, -3.55078125, -2.595703125, -5, 3.119140625, 9.703125, 9.546875, -6.19140625]
  expected output: [1, 1, 1, 0, 1, 0, 0, 0, 1, 1 ...] (len=24)
  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)
  expected output full nd:
[1, 1, 1, 0, 1, 0, 0, 0, 1, 1, ...] (len=24, shape=[4, 6])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[4, 6])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[4, 6];
    inputB: f16[4, 6];
  }

  nodes {
    [output] = lesserOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
