tests/snapshots/run_wpt_conformance__coreml_lesserOrEqual_float16_broadcast_1D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser_or_equal.https.any.js lesserOrEqual float16 broadcast 1D to 4D, coreml
 lesser_or_equal :: lesserOrEqual float16 broadcast 1D to 4D: index 5: actual=0 expected=1 tolerance=0
  inputs: inputA: [4.83984375]; inputB: [-8.28125, -3.21875, -6.54296875, -0.54052734375, -5.4140625, 5.58203125, 1.501953125, 6.59375, -9.921875, -7.13671875, -4.9140625, -9.140625, 9.40625, -9.828125, -2.01171875, -6.59765625, -8.265625, 8.28125, 1.6455078125, -1.486328125, -5, -0.9208984375, -9.4375, 9.8125]
  expected output: [0, 0, 0, 0, 0, 1, 0, 1, 0, 0 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[0, 0, 0, 0, 0, 1, 0, 1, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[1];
    inputB: f16[2, 2, 2, 3];
  }

  nodes {
    [output] = lesserOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
